--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -132,7 +132,7 @@ hr {
 }
 
 body {
-    background-image: url('../img/body-wallp.jpg');
+    background-image: url('../img/bg.png');
     background-repeat: round;
     background-position: right top;
     height: 100vh;
@@ -163,7 +163,7 @@ li a {
 }
 
 body {
-    font-family: Raleway,sans-serif;
+    font-family: Verdana,sans-serif;
     height: 100vh;
     margin: 0 0 0 0;
 }
@@ -205,12 +205,15 @@ body {
     margin-right: 40px;
     height: min-content;
     padding: 15px 30px 30px 30px;
-    float: left;
     background-color: transparent;   /*#A1DD9E;*/
     opacity: 0.8;
-    color: green;
+    color: #9d9d9d;
     border: none;
     border-left: 3px solid green;
+    box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
+}
+.registration-container {
+    float: right !important;
 }
 .inp input {
     background-color: transparent;
@@ -243,7 +246,7 @@ body {
     border-radius: 30px;
     color: green;
     padding: 5px 10px 5px 10px;
-    font-family: Raleway,sans-serif;
+    font-family: Verdana,sans-serif;
     font-weight: bold;
     margin-top: 10px;
     margin-right: 10px;
@@ -288,12 +291,9 @@ body {
 
 .logout-btn {
     background-color: #222;
-    color: green;
+    color: #9d9d9d;
     border: none;
     cursor: pointer;
-}
-.logout-btn:hover {
-    background-color: dimgray;
 }
 
 .btn {
@@ -321,35 +321,143 @@ body {
 
 .post-container {
     width: 90%;
-    padding-left: 2.5%;
-    display: inline-flex;
+    padding-left: 5%;
+}
+.img-container {
+    width: 90%;
+    margin-left: 5%;
+    height: auto;
+}
+.img-container img {
+    height: auto;
+    width: 100%;
 }
 .post {
-    width: 30%;
+    width: 300px;
     margin-right: 2.5%;
-    border: 1px solid blueviolet;
+    margin-bottom: 15px;
+    border: 2px solid green;
+    box-shadow: 0px 8px 8px 8px rgba(0,0,0,0.2);
+    color: #9d9d9d;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+
+}
+.leermas {
+    float: right;
+    margin: 10px;
+}
+.title {
+    margin-bottom: 5px;
+}
+.close-btn {
+    text-decoration: none;
+    background: transparent;
+    border: none;
+    color: green;
+    font-size: 16px;
+    position: absolute;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .intro {
     width: 30%;
+    margin: 0 10% 10px 40px;
     margin-right: 10%;
-    margin-left: 10px;
+    margin-left: 6.5%;
     text-align: left;
     font-size: 30px;
+    box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
 }
 .intro span {
     color: green;
 }
 
 .slider {
-    width: 80%;
-    margin-left: 10%;
+    width: 88%;
+    margin-left: 6.5%;
     height: auto;
-    margin-top: 15%; 
+    margin-top: 6%;
 }
 
 .row1 {
     width: 90%;
     display: -webkit-box;
     height: 400px;
+    margin-top: 30px;
+}
+
+.drop-down {
+
+}
+.drop-down-content {
+    display: none;
+    position: absolute;
+    background-color: #222;
+    color: #9d9d9d;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+.drop-down:hover .drop-down-content {
+    display: block;
+}
+.drop-down-content:hover {
+    display: block;
+}
+
+.myacc {
+    float: right !important;
+}
+.drop-down-content a, .drop-down-content form {
+    border-top: 1px solid green;
+}
+
+.logoutformm {
+    display: block;
+    color: #9d9d9d;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+.logoutformm input {
+    font-size: 16px;
+}
+
+.account-container {
+    margin-left: 33%;
+}
+
+.error, .success, .exito , .OK{
+    font-size: 16px;
+    opacity: 1;
+    padding: 10px 0 10px 10px;
+    margin-left: 10%;
+    width: 80%;
+    font-family: Verdana,sans-serif;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    margin-bottom: 50px;
+}
+.error {
+    color: #a94442;
+    background-color: rgba(242, 222, 222, 0.3);
+    border-color: #ebccd1;
+}
+.success , .exito, .OK{
+    color: #3c763d;
+    background-color: rgba(223, 240, 216, 0.3);
+    border-color: #d6e9c6;
+}
+
+.slider {
+    padding: 5px;
+    border: 2px solid green;
+    box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
+}
+.mySlides {
+    margin-left: 38%;
 }
