--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -307,9 +307,15 @@ body {
     width: 33%;
     height: 300px;
     background-color: transparent;
-    border: 2px solid black;
+    border: 2px solid green;
     margin-right: 33%;
-    float: right
+    float: right;
+    border-right: none;
+    border-bottom: none;
+    border-top: none;
+    padding-left: 10px;
+    box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
+    color: green;
 }
 #uplo {
     color: #9d9d9d;
@@ -317,6 +323,7 @@ body {
     background-color: transparent;
     border: none;
     text-decoration: none;
+    color: green;
 }
 
 .post-container {
@@ -347,6 +354,18 @@ body {
 .leermas {
     float: right;
     margin: 10px;
+    text-decoration: none;
+    color: green;
+    border-left: 1px solid green;
+    padding-left: 5px;
+}
+.descr {
+    float: left;
+    margin: 10px;
+    text-decoration: none;
+    color: green;
+    border-left: 1px solid green;
+    padding-left: 5px;
 }
 .title {
     margin-bottom: 5px;
@@ -370,6 +389,7 @@ body {
     text-align: left;
     font-size: 30px;
     box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
+    overflow: hidden;
 }
 .intro span {
     color: green;
@@ -460,4 +480,17 @@ body {
 }
 .mySlides {
     margin-left: 38%;
+}
+
+.only {
+    margin-left: 25%; 
+    width: 50%;
+}
+
+.btn-edit {
+    text-decoration: none;
+    border: 1px solid green;
+    color: green;
+    background-color: transparent;
+    font-size: 16px;
 }
