--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -390,6 +390,7 @@ body {
     font-size: 30px;
     box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
     overflow: hidden;
+    color: #9d9d9d;
 }
 .intro span {
     color: green;
