--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -480,7 +480,9 @@ body {
     box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
 }
 .mySlides {
-    margin-left: 38%;
+    margin-left: 20%;
+    height: auto;
+    width: 60%;
 }
 
 .only {
